--- a/index.html
+++ b/index.html
@@ -6,12 +6,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/output.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/output.css">
+    <script src="tailwind.config.js" defer></script>
     <title>201 Assignment 5</title>
 </head>
 
-<body>
-    <header> Tailwind Activity</header>
-    <div class=""></div>
+<body class="bg-indigo-100">
+    <div class="grid grid-cols-1 lg:grid-cols-2"></div>
+    <div class=" bg-blue-900 lg:min-h-screen lg:flex lg:items-center p-8 sm:p-12">
+        <div class="flex-grow"></div>
+        <h1 class="text-center text-white  text-2xl sm:text-5xl mb-4">
+            Welcome
+        </h1>
+        <p class="text-center text-blue-200 sm:text-lg">
+            Please Login
+        </p>
+    </div>
+    </div>
+    <div class="lg:min-h-screen lg:flex lg:items-center p-12 lg:p-24">
+        <div class="flex-grow bg-white shadow-xl rounded-md border-gray-300 p-8">
+            <div class="sm:flex sm: items-center">
+                <img src= "image.jpg" alt = "Photo" class= "sm:flex-shrink-0 mx-auto sm:mx-0 h-24 rounded-full">
+             </div>
+
+
+
+
+
+
+
+
+
+
+
+
+            <footer>
+                <p>&copy; 2021 | Mysia Santana</p>
+            </footer>
 </body>
 
 </html>
