--- a/index.html
+++ b/index.html
@@ -12,38 +12,37 @@
     <title>201 Assignment 5</title>
 </head>
 
-<body class="bg-indigo-100">
-    <div class="grid grid-cols-1 lg:grid-cols-2"></div>
-    <div class=" bg-blue-900 lg:min-h-screen lg:flex lg:items-center p-8 sm:p-12">
-        <div class="flex-grow"></div>
-        <h1 class="text-center text-white  text-2xl sm:text-5xl mb-4">
-            Welcome
-        </h1>
-        <p class="text-center text-blue-200 sm:text-lg">
-            Please Login
-        </p>
-    </div>
-    </div>
-    <div class="lg:min-h-screen lg:flex lg:items-center p-12 lg:p-24">
-        <div class="flex-grow bg-white shadow-xl rounded-md border-gray-300 p-8">
-            <div class="sm:flex sm: items-center">
-                <img src= "image.jpg" alt = "Photo" class= "sm:flex-shrink-0 mx-auto sm:mx-0 h-24 rounded-full">
-             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-            <footer>
-                <p>&copy; 2021 | Mysia Santana</p>
-            </footer>
+<body>
+    <div class="bg-indigo-100">
+        <div class="grid grid-cols-1 lg:grid-cols-2">
+            <div class=" bg-blue-900  lg:flex lg:items-center p-8 sm:p-12">
+                <div class="flex-grow">
+                    <h1 class="text-center text-white text-2xl sm:text-5xl mb-4">
+                        Welcome
+                    </h1>
+                    <p class="text-center text-blue-200 lg:text-lg">
+                        Please Login
+                    </p>
+                </div>
+            </div>
+            <div class="lg:min-h-screen lg:flex lg:items-center p-12 lg:p-24">
+                <div class="flex-grow bg-white shadow-xl rounded-md border-gray-300 p-8">
+                    <div class="sm:flex sm:items-center">
+                        <img src="/cpnt201/cpnt201-a5/assets/images/pom.grama.sm.jpg" alt="Photo" class="sm:flex-shrink-0 mx-auto sm:mx-0 h-24 w-24 rounded-full">
+                        <div class="sm:ml-4 sm\:text-left text-center">
+                            <p class="text-2xl">PomPom</p>
+                            <p class="text-sm text-gray-100">Cute Puppy</p>
+                            <div class="mt-4">
+                                <button type="button" class="text-red-500 hover:text-white hover:bg-red-500 border border-red- 500 font-semibold rounded-md text-xs px-4 py-1 "> Not PomPom?
+                            
+                        </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 </body>
+
 
 </html>
